--- a/docker/ansible/tasks/update-omz.yaml
+++ b/docker/ansible/tasks/update-omz.yaml
@@ -2,7 +2,7 @@
 
 - name: Check if oh-my-zsh is installed
   stat:
-    path: "/home/{{ ansible_user }}/.oh-my-zsh"
+    path: "/home/{{ ansible_facts['user_id'] }}/.oh-my-zsh"
   register: oh_my_zsh_installed
   become: false
 
@@ -10,7 +10,7 @@
   become: true
   shell: git -c "url.https://github.com/.insteadOf=git@github.com:" pull
   args:
-    chdir: "/home/{{ ansible_user }}/.oh-my-zsh"
+    chdir: "/home/{{ ansible_facts['user_id'] }}/.oh-my-zsh"
     executable: /bin/bash
   register: pull_result
   changed_when: pull_result.stdout_lines[0] != "Already up to date."
