--- a/docker/ansible/playbooks/debug.yaml
+++ b/docker/ansible/playbooks/debug.yaml
@@ -6,7 +6,7 @@
   tasks:
   - name: Show host IP
     debug:
-      msg: "{{ ansible_default_ipv4.address|default(ansible_all_ipv4_addresses[0]) }}"
+      msg: "{{ ansible_facts['default_ipv4'].address|default(ansible_facts['all_ipv4_addresses'][0]) }}"
 
   - name: Initialize empty list for devices
     set_fact:
@@ -17,11 +17,11 @@
     set_fact:
       storage_devices: "{{ storage_devices + [item.key] }}"
     no_log: true
-    with_dict: "{{ ansible_devices }}"
+    with_dict: "{{ ansible_facts['devices'] }}"
     when: "item.value.host.startswith('SCSI storage controller: Red Hat, Inc. Virtio SCSI')"
 
   - name: Show values for SCSI devices
-    debug: msg="{{ ansible_devices[item] }}"
+    debug: msg="{{ ansible_facts['devices'][item] }}"
     loop: "{{ storage_devices }}"
 
   - name: Get variable
