--- a/docker/ansible/playbooks/update-data-disks.yaml
+++ b/docker/ansible/playbooks/update-data-disks.yaml
@@ -68,7 +68,7 @@
       ansible.builtin.file:
         path: "{{ item }}"
         state: "directory"
-        owner: "{{ansible_user}}"
+        owner: "{{ ansible_facts['user_id'] }}"
         group: "docker"
         mode: "0755"
       loop:
