--- a/docker/ansible/templates/data/common/gatus/config.yaml
+++ b/docker/ansible/templates/data/common/gatus/config.yaml
@@ -95,7 +95,7 @@ endpoints:
     url: "https://v60.${DOMAINNAME}"
     group: External
     conditions:
-      - "[BODY] == pat(*Built by DevSecNinja*)"
+      - "[BODY] == pat(*V60 Recipe Calculator*)"
       - "[STATUS] == 200"
       - "[CERTIFICATE_EXPIRATION] > 48h"
       - "[RESPONSE_TIME] < 1000"
